@@ -287,6 +287,7 @@ struct _GdkWindowObject
 
   guint accept_focus : 1;
   guint focus_on_map : 1;
+  guint shaped : 1;
   
   GdkEventMask event_mask;
 };
