@@ -3672,6 +3672,7 @@ gdk_window_shape_combine_mask (GdkWindow *window,
 			       GdkBitmap *mask,
 			       gint x, gint y)
 {
+  GdkWindowObject *private = (GdkWindowObject *)window;
   Pixmap pixmap;
   gint xoffset, yoffset;
   
@@ -3694,12 +3695,16 @@ gdk_window_shape_combine_mask (GdkWindow *window,
       if (mask)
 	{
 	  pixmap = GDK_PIXMAP_XID (mask);
+	  
+	  private->shaped = TRUE;
 	}
       else
 	{
 	  x = 0;
 	  y = 0;
 	  pixmap = None;
+
+	  private->shaped = FALSE;
 	}
       
       XShapeCombineMask (GDK_WINDOW_XDISPLAY (window),
@@ -3741,7 +3746,8 @@ gdk_window_shape_combine_region (GdkWindow *window,
                                  GdkRegion *shape_region,
                                  gint       offset_x,
                                  gint       offset_y)
-{
+{ 
+  GdkWindowObject *private = (GdkWindowObject *)window;
   gint xoffset, yoffset;
   
   g_return_if_fail (GDK_IS_WINDOW (window));
@@ -3769,6 +3775,8 @@ gdk_window_shape_combine_region (GdkWindow *window,
     {
       gint n_rects = 0;
       XRectangle *xrects = NULL;
+
+      private->shaped = TRUE;
 
       _gdk_region_get_xrectangles (shape_region,
                                    0, 0,
